--- a/biggan/BigGAN_handson.ipynb
+++ b/biggan/BigGAN_handson.ipynb
@@ -55,6 +55,11 @@
       "outputs": [],
       "source": [
         "# BigGAN-deep models\n",
+        "module_path = 'biggan-deep-128'\n",
+        "# module_path = 'biggan-deep-256'\n",
+        "# module_path = 'biggan-deep-512'\n",
+        "\n",
+        "\n",
         "# module_path = 'https://tfhub.dev/deepmind/biggan-deep-128/1'  # 128x128 BigGAN-deep\n",
         "# module_path = \"https://tfhub.dev/deepmind/biggan-deep-256/1\"  # 256x256 BigGAN-deep\n",
         "# module_path = 'https://tfhub.dev/deepmind/biggan-deep-512/1'  # 512x512 BigGAN-deep\n",
@@ -171,13 +176,7 @@
         "      return imshow(a, format='jpeg')\n",
         "    else:\n",
         "      raise\n",
-        "  return disp\n",
-        "\n",
-        "  def interpolate(A, B, num_interps):\n",
-        "    if A.shape != B.shape:\n",
-        "      raise ValueError('A and B must have the same shape to interpolate.')\n",
-        "    alphas = np.linspace(0, 1, num_interps)\n",
-        "    return np.array([(1-a)*A + a*B for a in alphas])"
+        "  return disp"
       ],
       "metadata": {
         "id": "f5b1WMb2ZZBH"
@@ -208,8 +207,8 @@
         "import logging\n",
         "logging.basicConfig(level=logging.INFO)\n",
         "\n",
-        "# Load pre-trained model tokenizer (vocabulary)\n",
-        "model = BigGAN.from_pretrained('biggan-deep-256')"
+        "# Load pre-trained model\n",
+        "model = BigGAN.from_pretrained(module_path)"
       ],
       "metadata": {
         "id": "MTzXEIyrU5DZ"
@@ -256,6 +255,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Generate images for your category"
+      ],
+      "metadata": {
+        "id": "8jijCRsspnJ5"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# prepare an input to biggan\n",
@@ -266,7 +274,7 @@
         "# class_vector = one_hot_from_int([933], batch_size=num_samples)\n",
         "noise_vector = truncated_noise_sample(truncation=truncation, batch_size=num_samples, seed=noise_seed)\n",
         "\n",
-        "# All in tensors\n",
+        "# convert to torch\n",
         "noise_vector = torch.from_numpy(noise_vector)\n",
         "class_vector = torch.from_numpy(class_vector)\n",
         "\n",
@@ -275,9 +283,9 @@
         "class_vector = class_vector.to('cuda')\n",
         "model.to('cuda')\n",
         "\n",
-        "# Generate an image\n",
+        "# run the generator\n",
         "with torch.no_grad():\n",
-        "    output = model(noise_vector, class_vector, truncation)\n",
+        "  output = model(noise_vector, class_vector, truncation)\n",
         "\n",
         "# If you have a GPU put back on CPU\n",
         "output = output.to('cpu')"
@@ -291,7 +299,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "View a result:"
+        "view a result:"
       ],
       "metadata": {
         "id": "wMg7-DFnbFOW"
@@ -352,7 +360,57 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Try some other categories:"
+        "## Try another category"
+      ],
+      "metadata": {
+        "id": "RK_WUqc7phcy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's make a `sample()` function to make it easier to generate images from the BigGAN model:"
+      ],
+      "metadata": {
+        "id": "J1UtOryqnJg_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def sample(model, z, y, truncation):\n",
+        "  # convert to torch\n",
+        "  noise_vector = torch.from_numpy(z)\n",
+        "  class_vector = torch.from_numpy(y)\n",
+        "\n",
+        "  # If you have a GPU, put everything on cuda\n",
+        "  noise_vector = noise_vector.to('cuda')\n",
+        "  class_vector = class_vector.to('cuda')\n",
+        "  model.to('cuda')\n",
+        "\n",
+        "  # run the generator\n",
+        "  with torch.no_grad():\n",
+        "    output = model(noise_vector, class_vector, truncation)\n",
+        "\n",
+        "  # If you have a GPU put back on CPU\n",
+        "  output = output.to('cpu')\n",
+        "\n",
+        "  return output"
+      ],
+      "metadata": {
+        "id": "Xadh4ppEparM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Ok. Now try some other categories.\n",
+        "\n",
+        "You can see the full list of categories here in this list: [imagenet1000 class ids](https://gist.githubusercontent.com/yrevar/942d3a0ac09ec9e5eb3a/raw/238f720ff059c1f82f368259d1ca4ffa5dd8f9f5/imagenet1000_clsidx_to_labels.txt).\n",
+        "\n",
+        "Just type in the number (f.ex. `933` for cheeseburger) for the variable `category` below."
       ],
       "metadata": {
         "id": "YUyGQWddfOM_"
@@ -372,7 +430,7 @@
         "truncation = 0.5  # between 0.02 and 1\n",
         "\n",
         "# set category\n",
-        "category = 933"
+        "category = 800 # slot machine"
       ]
     },
     {
@@ -381,21 +439,8 @@
         "class_vector = one_hot_from_int([category], batch_size=num_samples)\n",
         "noise_vector = truncated_noise_sample(truncation=truncation, batch_size=num_samples, seed=noise_seed)\n",
         "\n",
-        "# All in tensors\n",
-        "noise_vector = torch.from_numpy(noise_vector)\n",
-        "class_vector = torch.from_numpy(class_vector)\n",
-        "\n",
-        "# If you have a GPU, put everything on cuda\n",
-        "noise_vector = noise_vector.to('cuda')\n",
-        "class_vector = class_vector.to('cuda')\n",
-        "model.to('cuda')\n",
-        "\n",
-        "# Generate an image\n",
-        "with torch.no_grad():\n",
-        "    output = model(noise_vector, class_vector, truncation)\n",
-        "\n",
-        "# If you have a GPU put back on CPU\n",
-        "output = output.to('cpu')"
+        "# generate the output from the model\n",
+        "output = sample(model, noise_vector, class_vector, truncation)"
       ],
       "metadata": {
         "id": "RWYivtCjeRZR"
@@ -439,6 +484,15 @@
       "source": [
         "print(class_vector) # lets see what our class vector was. See how it is all zero except for one `1`"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "notice that `class_vector` array is all equal to `0` except for one `1`. that is what makes it a **one hot** array."
+      ],
+      "metadata": {
+        "id": "PagwWV3OopIc"
+      }
     },
     {
       "cell_type": "markdown",
@@ -501,24 +555,8 @@
         "z_combo = percent_A * z_A + percent_B * z_B\n",
         "y_combo = percent_A * y_A + percent_B * y_B\n",
         "\n",
-        "\n",
         "# Generate the images\n",
-        "\n",
-        "# convert to torch\n",
-        "noise_vector = torch.from_numpy(z_combo)\n",
-        "class_vector = torch.from_numpy(y_combo)\n",
-        "\n",
-        "# If you have a GPU, put everything on cuda\n",
-        "noise_vector = noise_vector.to('cuda')\n",
-        "class_vector = class_vector.to('cuda')\n",
-        "model.to('cuda')\n",
-        "\n",
-        "# run the generator\n",
-        "with torch.no_grad():\n",
-        "    output = model(noise_vector, class_vector, truncation)\n",
-        "\n",
-        "# If you have a GPU put back on CPU\n",
-        "output = output.to('cpu')\n",
+        "output = sample(model, z_combo, y_combo, truncation)\n",
         "\n",
         "# show the result\n",
         "results = convert_to_images(output)\n",
@@ -546,11 +584,9 @@
       "source": [
         "# 3. Interpolate between BigGAN samples\n",
         "\n",
-        "Now we are going calculate intermediate samples bewteen two different images.\n",
+        "Now we are going calculate multiple intermediate samples between two different images.\n",
         "\n",
-        "Try two different classes (`category_A`, and `category_B`). We are going to generate intermediate steps between those things.\n",
-        "\n",
-        "(Try 207 for golden retriever, and 8 for hen)"
+        "First lets make helper functions to interpolate between vectors."
       ]
     },
     {
@@ -561,6 +597,12 @@
       },
       "outputs": [],
       "source": [
+        "def interpolate(A, B, num_interps):\n",
+        "  if A.shape != B.shape:\n",
+        "    raise ValueError('A and B must have the same shape to interpolate.')\n",
+        "  alphas = np.linspace(0, 1, num_interps)\n",
+        "  return np.array([(1-a)*A + a*B for a in alphas])\n",
+        "\n",
         "def interpolate_and_shape(A, B, num_samples, num_interps):\n",
         "  interps = interpolate(A, B, num_interps)\n",
         "  return (interps.transpose(1, 0, *range(2, len(interps.shape)))\n",
@@ -568,32 +610,15 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "def sample(model, z, y, truncation):\n",
-        "  # convert to torch\n",
-        "  noise_vector = torch.from_numpy(z)\n",
-        "  class_vector = torch.from_numpy(y)\n",
+        "Try two different classes (`category_A`, and `category_B`). We are going to use the interpolate functions to generate intermediate steps between those things.\n",
         "\n",
-        "  # If you have a GPU, put everything on cuda\n",
-        "  noise_vector = noise_vector.to('cuda')\n",
-        "  class_vector = class_vector.to('cuda')\n",
-        "  model.to('cuda')\n",
-        "\n",
-        "  # run the generator\n",
-        "  with torch.no_grad():\n",
-        "    output = model(noise_vector, class_vector, truncation)\n",
-        "\n",
-        "  # If you have a GPU put back on CPU\n",
-        "  output = output.to('cpu')\n",
-        "\n",
-        "  return output"
+        "(Try 48 for komodo dragon, and 8 for hen)"
       ],
       "metadata": {
-        "id": "k4rpcYq7hcaP"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "OR8UcZ30qUGI"
+      }
     },
     {
       "cell_type": "code",
@@ -610,7 +635,7 @@
         "\n",
         "# class and noise vectors\n",
         "noise_seed_A = 0\n",
-        "category_A = 48\n",
+        "category_A = 48 # komodo dragon\n",
         "# category_A = 850 # teddy bear\n",
         "\n",
         "noise_seed_B = 0\n",
@@ -645,17 +670,8 @@
       },
       "outputs": [],
       "source": [
-        "imshow(ims[2])"
+        "imshow(ims[2]) # show one hybrid in-between state"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "save our first image out as a jpg"
-      ],
-      "metadata": {
-        "id": "yTktDd-1k1dx"
-      }
     },
     {
       "cell_type": "code",
@@ -665,7 +681,7 @@
       },
       "outputs": [],
       "source": [
-        "# save one image\n",
+        "# save one image to disk\n",
         "save_as_images(output[2].unsqueeze(0), \"my_hybrid.jpg\")\n",
         "\n",
         "# save all the images\n",
@@ -1033,6 +1049,7 @@
     "colab": {
       "name": "BigGAN Hands-On",
       "provenance": [],
+      "toc_visible": true,
       "gpuType": "V100",
       "include_colab_link": true
     },
