--- a/biggan/BigGAN_handson.ipynb
+++ b/biggan/BigGAN_handson.ipynb
@@ -176,7 +176,26 @@
         "      return imshow(a, format='jpeg')\n",
         "    else:\n",
         "      raise\n",
-        "  return disp"
+        "  return disp\n",
+        "\n",
+        "def sample(model, z, y, truncation):\n",
+        "  # convert to torch\n",
+        "  noise_vector = torch.from_numpy(z)\n",
+        "  class_vector = torch.from_numpy(y)\n",
+        "\n",
+        "  # If you have a GPU, put everything on cuda\n",
+        "  noise_vector = noise_vector.to('cuda')\n",
+        "  class_vector = class_vector.to('cuda')\n",
+        "  model.to('cuda')\n",
+        "\n",
+        "  # run the generator\n",
+        "  with torch.no_grad():\n",
+        "    output = model(noise_vector, class_vector, truncation)\n",
+        "\n",
+        "  # If you have a GPU put back on CPU\n",
+        "  output = output.to('cpu')\n",
+        "\n",
+        "  return output"
       ],
       "metadata": {
         "id": "f5b1WMb2ZZBH"
@@ -369,43 +388,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Let's make a `sample()` function to make it easier to generate images from the BigGAN model:"
-      ],
-      "metadata": {
-        "id": "J1UtOryqnJg_"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def sample(model, z, y, truncation):\n",
-        "  # convert to torch\n",
-        "  noise_vector = torch.from_numpy(z)\n",
-        "  class_vector = torch.from_numpy(y)\n",
-        "\n",
-        "  # If you have a GPU, put everything on cuda\n",
-        "  noise_vector = noise_vector.to('cuda')\n",
-        "  class_vector = class_vector.to('cuda')\n",
-        "  model.to('cuda')\n",
-        "\n",
-        "  # run the generator\n",
-        "  with torch.no_grad():\n",
-        "    output = model(noise_vector, class_vector, truncation)\n",
-        "\n",
-        "  # If you have a GPU put back on CPU\n",
-        "  output = output.to('cpu')\n",
-        "\n",
-        "  return output"
-      ],
-      "metadata": {
-        "id": "Xadh4ppEparM"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "Ok. Now try some other categories.\n",
         "\n",
         "You can see the full list of categories here in this list: [imagenet1000 class ids](https://gist.githubusercontent.com/yrevar/942d3a0ac09ec9e5eb3a/raw/238f720ff059c1f82f368259d1ca4ffa5dd8f9f5/imagenet1000_clsidx_to_labels.txt).\n",
@@ -432,6 +414,16 @@
         "# set category\n",
         "category = 800 # slot machine"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Create our input vectors and generate our image. We are going to use our\n",
+        "`sample()` function to make it easier to generate images from the BigGAN model."
+      ],
+      "metadata": {
+        "id": "gDL2U8A7rrg2"
+      }
     },
     {
       "cell_type": "code",
