--- a/sg3/StyleGAN3.ipynb
+++ b/sg3/StyleGAN3.ipynb
@@ -12,6 +12,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "EMAR349 ML for the Arts - Twomey - [ml.roberttwomey.com](https://ml.roberttwomey.com)"
+      ],
+      "metadata": {
+        "id": "Kim-wqRoPPMl"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "aHzltei9Ue7I"
       },
@@ -25,9 +34,7 @@
         "id": "WVF2P1OlT92b"
       },
       "source": [
-        "This Colab is to try out **StyleGAN3** (aka Alias-Free GAN) released in [this repo](https://github.com/NVlabs/stylegan3) by NVidia. Colab produced by [crimeacs](https://twitter.com/EarthML1).\n",
-        "\n",
-        "Не забудь заглянуть в мой [telegram канал](https://t.me/nn_for_science), где я рассказываю про Машинное Обучение в науке.\n",
+        "This notebook explores **StyleGAN3** (aka Alias-Free GAN) released in [this repo](https://github.com/NVlabs/stylegan3) by NVidia in 2021. Adapted for ML for the Arts from [a Colab](https://colab.research.google.com/drive/1OkZZa5Yzt4scTwbwBORkki5-zNEAdXW1#scrollTo=IkBzNIQ9QsFB) produced by [crimeacs](https://twitter.com/EarthML1).\n",
         "____\n",
         "**[UPD 18.10.2021]** Added ThisSneakersDoesn'tExist model by [@stan_vossen](https://twitter.com/stan_vossen)  +  seems like [@l4rz](https://twitter.com/l4rz) killed the model for cosplay\n",
         "\n",
@@ -44,7 +51,7 @@
       },
       "outputs": [],
       "source": [
-        "# !pip install --upgrade torch==1.9.1+cu111 torchvision==0.10.1+cu111 -f https://download.pytorch.org/whl/torch_stable.html\n",
+        "#!pip install --upgrade torch==1.9.1+cu111 torchvision==0.10.1+cu111 -f https://download.pytorch.org/whl/torch_stable.html\n",
         "!pip install --upgrade torch==1.11.0+cu113 torchvision==0.12.0+cu113 -f https://download.pytorch.org/whl/torch_stable.html\n",
         "!pip install einops ninja\n",
         "#!pip install --upgrade https://download.pytorch.org/whl/nightly/cu111/torch-1.11.0.dev20211012%2Bcu111-cp37-cp37m-linux_x86_64.whl https://download.pytorch.org/whl/nightly/cu111/torchvision-0.12.0.dev20211012%2Bcu111-cp37-cp37m-linux_x86_64.whl\n",
@@ -85,7 +92,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "IkBzNIQ9QsFB"
+        "id": "IkBzNIQ9QsFB",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -127,6 +135,15 @@
         "plt.imshow(img);\n",
         "plt.axis('off');"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Open file browser at left and download still images from `/out` to to your local machine."
+      ],
+      "metadata": {
+        "id": "-_c3rFkyQQGQ"
+      }
     },
     {
       "cell_type": "code",
@@ -196,6 +213,32 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Open file browser at left and download `lerp.mp4` to save it on your local machine. (Found in `/stylegan3` directory)"
+      ],
+      "metadata": {
+        "id": "AFPnHNMnQHbC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Activities:\n",
+        "- Try experimenting with different seeds. You can use the image generation code above to test out seeds.\n",
+        "- Slow down the interpolation, generating a higher number of frames between keyframes.\n",
+        "  - change `w_frames` in the code above.\n",
+        "- Try a different number of keyframes.\n",
+        "- Try a different model. See a list here: [awesome-pretrained-stylegan3](https://github.com/justinpinkney/awesome-pretrained-stylegan3)\n",
+        "- Play with the truncation value (currently 1).\n",
+        "  - Select **Show code** and modify the `--trunc=1` argument to `!python gen_video.py`\n",
+        "- Make your own `gen_video.py` method below that pauses (holds) on each keyframe as opposed to smoothly interpolating through. (source is [here](https://github.com/NVlabs/stylegan3/blob/main/gen_video.py))\n"
+      ],
+      "metadata": {
+        "id": "KYs-zahxR24g"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -206,7 +249,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title # Generate 🎵 music video\n",
+        "#@title # Optional: Generate 🎵 music video\n",
         "#@markdown ##**Choose your settings**\n",
         "from IPython.display import clear_output\n",
         "%cd /content/stylegan3\n",
@@ -423,6 +466,7 @@
     "colab": {
       "machine_shape": "hm",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
