--- a/clip-sg3/CLIP-StyleGAN3.ipynb
+++ b/clip-sg3/CLIP-StyleGAN3.ipynb
@@ -31,7 +31,7 @@
         "\n",
         "*Your eyes emit celestial light, from the stars you are from and are made of*\n",
         "\n",
-        "If you’re going for faces, this is the one. Human or non-human, real or painted, choose a dataset and see what happens. Upload an image to take it to the next level. Generates images (mostly faces) using nvidia [StyleGan3](https://github.com/NVlabs/stylegan3) with [CLIP](https://openai.com/research/clip) guidance.\n",
+        "This notebook explore text-guided image generation with [StyleGan3](https://github.com/NVlabs/stylegan3) using [CLIP](https://openai.com/research/clip) for text-guidance.\n",
         "\n",
         "Written by [nshepperd](https://twitter.com/nshepperd1). Thanks to [Katherine Crowson](https://twitter.com/RiversHaveWings) for coming up with many improved sampling tricks, as well as some of the code. Adapted for ML for the Arts.\n",
         "\n",
@@ -89,7 +89,7 @@
         "seed = 21 #@param {type: \"number\"}\n",
         "\n",
         "# Model type to use.\n",
-        "model = 'Animal Faces'  #@param ['Painted Faces', 'Animal Faces', 'Flickr Faces', 'Wiki Art', 'Landscapes 256']\n",
+        "model = 'Landscapes 256'  #@param ['Painted Faces', 'Animal Faces', 'Flickr Faces', 'Wiki Art', 'Landscapes 256']\n",
         "\n",
         "# We haven't completely understood which parameters influence the generation of this model. Changing the learning rate could help (between 0 and 100)\n",
         "learning_rate = 10 #@param {type: \"number\"}\n",
