--- a/clip-biggan/clip-biggan.ipynb
+++ b/clip-biggan/clip-biggan.ipynb
@@ -107,7 +107,7 @@
       "outputs": [],
       "source": [
         "# seeding/iteration\n",
-        "seed = 10 #128#255#1#5#9#3\n",
+        "seed = 128#255#1#5#9#3\n",
         "iterations = 40 #100#40\n",
         "terminal_iterations = iterations"
       ]
@@ -232,7 +232,7 @@
       },
       "outputs": [],
       "source": [
-        "# !git clone https://github.com/openai/CLIP.git"
+        "!git clone https://github.com/openai/CLIP.git"
       ]
     },
     {
@@ -981,10 +981,10 @@
   "metadata": {
     "accelerator": "GPU",
     "colab": {
-      "machine_shape": "hm",
       "name": "WanderCLIP.ipynb",
       "private_outputs": true,
       "provenance": [],
+      "gpuType": "V100",
       "include_colab_link": true
     },
     "kernelspec": {
