--- a/clip-biggan/clip-biggan.ipynb
+++ b/clip-biggan/clip-biggan.ipynb
@@ -251,6 +251,17 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!pip install pytorch_pretrained_biggan"
+      ],
+      "metadata": {
+        "id": "J_KEYww2i19o"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "cellView": "form",
