--- a/sgxl-clip/sgxl-clip.ipynb
+++ b/sgxl-clip/sgxl-clip.ipynb
@@ -349,29 +349,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!ls samples/*/0300.jpg"
-      ],
-      "metadata": {
-        "id": "zi-j_mqCBP1r"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "display(Image.open('samples/20240307230402/0500.jpg'))"
-      ],
-      "metadata": {
-        "id": "pOudXXDMBYde"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!ffmpeg -r 60 -i 'samples/20240307233800/%04d.jpg' -vcodec libx264 -crf 18 -pix_fmt yuv420p a-seed-13.mp4"
+        "!ffmpeg -r 60 -i samples/{timestring}/%04d.jpg -vcodec libx264 -crf 18 -pix_fmt yuv420p dogpark-{seed}-{steps}.mp4"
       ],
       "metadata": {
         "id": "R3T08C5FBsRN"
