--- a/clip-diffusion/CLIP_Guided_Diffusion_HQ.ipynb
+++ b/clip-diffusion/CLIP_Guided_Diffusion_HQ.ipynb
@@ -43,42 +43,10 @@
         "id": "1YwMUyt9LHG1"
       },
       "source": [
-        "# Generates images from text prompts with CLIP guided diffusion.\n",
+        "# Generate images from text prompts with CLIP guided diffusion.\n",
         "\n",
         "Original notebook by Katherine Crowson (https://github.com/crowsonkb, https://twitter.com/RiversHaveWings). It uses OpenAI's 512x512 class-conditional ImageNet diffusion model (https://github.com/openai/guided-diffusion) together with CLIP (https://github.com/openai/CLIP) to connect text prompts with images."
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "cellView": "form",
-        "id": "XIqUfrmvLIhg"
-      },
-      "source": [
-        "# @title Licensed under the MIT License\n",
-        "\n",
-        "# Copyright (c) 2021 Katherine Crowson\n",
-        "\n",
-        "# Permission is hereby granted, free of charge, to any person obtaining a copy\n",
-        "# of this software and associated documentation files (the \"Software\"), to deal\n",
-        "# in the Software without restriction, including without limitation the rights\n",
-        "# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
-        "# copies of the Software, and to permit persons to whom the Software is\n",
-        "# furnished to do so, subject to the following conditions:\n",
-        "\n",
-        "# The above copyright notice and this permission notice shall be included in\n",
-        "# all copies or substantial portions of the Software.\n",
-        "\n",
-        "# THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
-        "# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
-        "# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
-        "# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
-        "# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
-        "# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN\n",
-        "# THE SOFTWARE."
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -290,7 +258,7 @@
         "id": "U0PwzFZbLfcy"
       },
       "source": [
-        "prompt = 'a seed, a plants basic unit, remains ever in potentia'\n",
+        "prompt = 'the sublime experience of an iceberg'\n",
         "batch_size = 1\n",
         "clip_guidance_scale = 1000  # Controls how much the image should look like the prompt.\n",
         "tv_scale = 150              # Controls the smoothness of the final output.\n",
@@ -383,6 +351,38 @@
         "                    display.display(display.Image(filename))\n",
         "\n",
         "do_run()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "XIqUfrmvLIhg"
+      },
+      "source": [
+        "# @title Licensed under the MIT License\n",
+        "\n",
+        "# Copyright (c) 2021 Katherine Crowson\n",
+        "\n",
+        "# Permission is hereby granted, free of charge, to any person obtaining a copy\n",
+        "# of this software and associated documentation files (the \"Software\"), to deal\n",
+        "# in the Software without restriction, including without limitation the rights\n",
+        "# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
+        "# copies of the Software, and to permit persons to whom the Software is\n",
+        "# furnished to do so, subject to the following conditions:\n",
+        "\n",
+        "# The above copyright notice and this permission notice shall be included in\n",
+        "# all copies or substantial portions of the Software.\n",
+        "\n",
+        "# THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
+        "# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+        "# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
+        "# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+        "# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
+        "# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN\n",
+        "# THE SOFTWARE."
       ],
       "execution_count": null,
       "outputs": []
