--- a/project/project-template.ipynb
+++ b/project/project-template.ipynb
@@ -3,7 +3,6 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Diffusers.ipynb",
       "provenance": [],
       "toc_visible": true,
       "include_colab_link": true
@@ -26,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/roberttwomey/ml-art-code/blob/master/diffusers/diffusers_intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/roberttwomey/ml-art-code/blob/master/project/project-template.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -41,37 +40,46 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Diffusion Models\n",
+        "# Project 2 Generative Visual\n",
         "\n",
-        "Diffusion models proved themselves very effective in artificial synthesis, even beating GANs for images. Because of that, they gained traction in the machine learning community and play an important role for systems like [DALL-E 2](https://openai.com/dall-e-2/) or [Imagen](https://imagen.research.google/) to generate photorealistic images when prompted on text.\n",
+        "Your Name, yourcontact@unl.edu\n",
+        "(Your teammate's contact info, if appropriate)\n",
         "\n",
-        "While the most prolific successes of diffusion models have been in the computer vision community, these models have also achieved remarkable results in other domains, such as:\n",
-        "- [video generation](https://video-diffusion.github.io/),\n",
-        "- [audio synthesis](https://diffwave-demo.github.io/),\n",
-        "- [reinforcement learning](https://diffusion-planning.github.io/),\n",
-        "- and more.\n",
+        "## Abstract\n",
         "\n",
-        "However, most of the recent research on diffusion models, *e.g.* DALL-E 2 and Imagen, is unfortunately not accessible to the broader machine learning community and typically remains behind closed doors.\n",
+        "Include your abstract here. This should be one paragraph clearly describing your concept, method, and results. This should tell us what architecture/approach you used. Also describe your creative goals, and whether you were successful in achieving them. Also could describe future directions.\n",
         "\n",
-        "Here comes the `diffusers` library with the goals to:\n",
+        "## Model/Data\n",
         "\n",
-        "1. gather recent diffusion models from independent repositories in a single and **long-term maintained** project that is built by and for the **community**,\n",
-        "2. reproduce high impact machine learning systems such as DALLE and Imagen in a manner that is accessible for the public, and\n",
-        "3. create an easy to use API that enables one to train their own models or re-use checkpoints from other repositories for inference.\n",
+        "Briefly describe the files that are included with your repository:\n",
+        "- trained models\n",
+        "- training data (or link to training data)\n",
         "\n",
-        "This notebook will walk you through the most important features of `diffusers`.\n",
+        "## Code\n",
         "\n",
-        "We assume that the reader has a minimal understanding of how diffusion models function. To refresh some theory as well as terminology, we recommend reading/skimming the following blog posts:\n",
+        "Your code for generating your project:\n",
+        "- Python: generative_code.py\n",
+        "- Jupyter notebooks: generative_code.ipynb\n",
         "\n",
-        "  - Lilian Weng's, OpenAI, [introductory post](https://lilianweng.github.io/posts/2021-07-11-diffusion-models/)\n",
-        "  - Yang Song's, Stanford, [introductory post](https://yang-song.github.io/blog/2021/score/)\n",
-        "  - The Annotated Diffusion Model [post](https://huggingface.co/blog/annotated-diffusion)\n",
+        "## Results\n",
         "\n",
-        "Or papers:\n",
-        "- The original paper proposing [thermodynamics for unsupervised learning](https://arxiv.org/abs/1503.03585),\n",
-        "- The paper for a popular diffusion model, [Denoising Diffusion Probabilistic Models\n",
-        " DDPM](https://arxiv.org/abs/2006.11239), or\n",
-        "- A recent paper covering [tradeoffs in diffusion models](https://arxiv.org/abs/2206.00364)"
+        "Documentation of your results in an appropriate format, both links to files and a brief description of their contents:\n",
+        "- image files (`.jpg`, `.png` or whatever else is appropriate)\n",
+        "- move files (uploaded to youtube or vimeo due to github file size limits)\n",
+        "- ... some other form\n",
+        "\n",
+        "## Technical Notes\n",
+        "\n",
+        "Any implementation details or notes we need to repeat your work.\n",
+        "- Does this code require other pip packages, software, etc?\n",
+        "- Does it run on some other (non-datahub) platform? (CoLab, etc.)\n",
+        "\n",
+        "## Reference\n",
+        "\n",
+        "References to any papers, techniques, repositories you used:\n",
+        "- Papers\n",
+        "- Repositories\n",
+        "- Blog posts\n"
       ],
       "metadata": {
         "id": "PzW5ublpBuUt",
