--- a/diffusers/stable_diffusion.ipynb
+++ b/diffusers/stable_diffusion.ipynb
@@ -88,6 +88,7 @@
       },
       "outputs": [],
       "source": [
+        "!pip install \"jax[cuda12_pip]==0.4.23\" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html\n",
         "!pip install diffusers==0.11.1\n",
         "!pip install transformers scipy ftfy accelerate"
       ]
@@ -927,12 +928,11 @@
     "accelerator": "GPU",
     "colab": {
       "provenance": [],
+      "gpuType": "V100",
       "include_colab_link": true
     },
-    "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
