--- a/clip-biggan/clip-biggan.ipynb
+++ b/clip-biggan/clip-biggan.ipynb
@@ -16,7 +16,7 @@
         "id": "OewBG-LxTHp4"
       },
       "source": [
-        "EMAR349 ML for the Arts - Twomey - Spring 2022 - [ml.roberttwomey.com](http://ml.roberttwomey.com)"
+        "EMAR349 ML for the Arts - Twomey - Spring 2024 - [ml.roberttwomey.com](http://ml.roberttwomey.com)"
       ]
     },
     {
@@ -232,7 +232,11 @@
       },
       "outputs": [],
       "source": [
-        "!git clone https://github.com/openai/CLIP.git"
+        "! pip install cma\n",
+        "! pip install ftfy regex tqdm\n",
+        "! pip install git+https://github.com/openai/CLIP.git\n",
+        "! pip install pytorch_pretrained_biggan\n",
+        "# !git clone https://github.com/openai/CLIP.git"
       ]
     },
     {
@@ -251,9 +255,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install pytorch_pretrained_biggan"
-      ],
+      "source": [],
       "metadata": {
         "id": "J_KEYww2i19o"
       },
@@ -282,7 +284,7 @@
       },
       "outputs": [],
       "source": [
-        "# %cd CLIP"
+        "# %cd /content/CLIP"
       ]
     },
     {
@@ -352,7 +354,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "AOWzPLrBbdxW"
       },
       "outputs": [],
@@ -397,7 +398,7 @@
         "save_every = 5 #@param {type:'integer'}\n",
         "fps = 1 #@param {type:'number'}\n",
         "freeze_secs = 0 #@param {type:'number'}\n",
-        "# seed = 0 #1#@param {type:'number'}\n",
+        "seed = 13#@param {type:'number'}\n",
         "\n",
         "# other settings, don't need to change these\n",
         "softmax_temp = 1\n",
